newclay/test/Compiler/Propagation/Fail/IfStatementNotAllBranchesReturn1/main.clay
define main;
overload main() {
    if (true)
        return 1;
}
